<resources>
    <string name="app_name">Buy a Monster</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_monster_scrolling">New Monster</string>
    <string name="title_activity_monster_detail_scrolling">View Monster</string>
    <string name="monster_name_is_required">Name is required</string>
    <string name="create_monster_failed_message">We couldn\'t create your monster, try again</string>
    <string name="create_monster_succeeded_message">Your monster was created</string>
    <string name="monster_image_content_description">autogenerated Image of the monster</string>
    <string name="type_your_monster_s_name_add_monster_scrolling_activity">Type your monster\'s name</string>
    <string name="add_a_short_description_add_monster_scrolling_activity">add a short description</string>
    <string name="scariness_label_add_monster_scrolling_activity">scariness</string>
    <string name="add_button_label_add_monster_scrolling_activity">Add</string>
    <string name="cancel_button_label_add_monster_activity">Cancel</string>
    <string name="overall_rating">Overall rating</string>
</resources>
