<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.AddMonsterScrollingActivity"
    tools:showIn="@layout/activity_add_monster_scrolling">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="600dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.03" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.97" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="62dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/monsterNameEditTextAddMonster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/type_your_monster_s_name_add_monster_scrolling_activity" />
        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/monsterDescriptionEditTextAddMonster"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/add_a_short_description_add_monster_scrolling_activity"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <SeekBar
            android:id="@+id/scarinnessSeekBarAddMonster"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:max="5"
            android:progress="0"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/monsterDescriptionEditTextAddMonster" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="169dp"
            android:layout_height="25dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="24dp"
            android:text="@string/scariness_label_add_monster_scrolling_activity"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/monsterDescriptionEditTextAddMonster" />

        <Button
            android:id="@+id/addButtonAddMonster"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:text="@string/add_button_label_add_monster_scrolling_activity"
            app:layout_constraintBaseline_toBaselineOf="@+id/cancelButtonAddMonster"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/cancelButtonAddMonster" />

        <Button
            android:id="@+id/cancelButtonAddMonster"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:text="@string/cancel_button_label_add_monster_activity"
            app:layout_constraintEnd_toStartOf="@+id/addButtonAddMonster"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/scarinnessSeekBarAddMonster" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>